# foodplan

./: docker-compose.yml  pyproject.toml
docker/python/: Dockerfile
foodplan/: gunicorn.py  test_db.sqlite3
foodplan/foodplan/: admin.py  models.py  settings.py  urls.py  views.py
foodplan/foodplan/migrations/: 0001_initial.py  0002_culinary_image.py  0003_term_culinary_price.py  0004_alter_allergen_options_alter_culinary_options_and_more.py  0005_food_type_food.py
foodplan/templates/: base.html  index.html  lk.html  order.html
foodplan/templates/account/: login.html  signup.html
foodplan/templates/rest_framework/: login.html
nginx/: sitename.conf
