[tool.poetry]
name = "foodplan"
version = "0.1.0"
description = ""
authors = ["Sangdak <82779027+Sangdak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
environs = "^9.5.0"
django-debug-toolbar = "^4.2.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
