[tool.poetry]
name = "foodplan"
version = "0.1.0"
description = ""
authors = ["Sangdak <82779027+Sangdak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
environs = "^9.5.0"
django-debug-toolbar = "^4.2.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.3"
djoser = "^2.2.0"
django-allauth = "^0.56.1"
dj-rest-auth = "^5.0.1"
pillow = "^10.0.1"
gevent = "^23.9.1"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
